# postfix-rest-api-connector

./: BUILD_AND_INSTALL.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_GUIDE.md  build-rpm-rust.sh  config.json.sample  postfix-rest-api-connector.spec
.github/workflows/: README-WORKFLOWS.md  rust.yml
src/: config.rs  main.rs  protocol.rs  server.rs
