[package]
name = "postfix-rest-api-connector"
version = "1.0.3"
edition = "2021"
authors = ["dutty5"]
description = "REST API connector for Postfix mail server"
license = "MIT"

[[bin]]
name = "postfix-rest-api-connector"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
url = "2.5"
percent-encoding = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
