[package]
name = "postfix-rest-api-connector"
version = "1.0.5"
edition = "2021"
authors = ["dutty5"]
description = "REST API connector for Postfix mail server"
license = "MIT"

[[bin]]
name = "postfix-rest-api-connector"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "http2"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
url = "2.5.7"
percent-encoding = "2.3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
